--- a/10-custom-entity/pom.xml
+++ b/10-custom-entity/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>vn.com.ntqsolution</groupId>
-    <artifactId>hibernate10_customEntityAndMore</artifactId>
+    <groupId>com.github.truongbb</groupId>
+    <artifactId>10-custom-entity</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
